Improved MergeIntervals